# media-algorithm

./: .gitignore  appspec.yml  build-cproject.sh  build-date.sh  buildspec.yml  pom.xml
config/: haproxy.cfg.ctmpl  logstash_agent.conf  sengled.properties.ctmpl
endpoint/: endpoint.yml
execenv/: execenv.yml
healthcheck/: healthcheck.yml
release_note/: release_note.txt
scripts/: AfterInstall.sh  ApplicationReload.sh  ApplicationRestart.sh  ApplicationStart.sh  ApplicationStop.sh  BeforeInstall.sh  Install.sh  ValidateService.sh
src/c/: Makefile  run_motion.sh
src/c/3rd/: build.sh
src/c/common/: log.h  yuv.h
src/c/encoder/: Makefile
src/c/lib/: README.rd
src/c/log4c/: build.sh  com_sengled_media_jni_JNIFunction.cpp  com_sengled_media_jni_JNIFunction.h  com_sengled_media_jni_JNIFunction_JNIFunctionHolder.h
src/c/motion/: CMakeLists.txt  release_note.txt  run.sh
src/c/motion/functions/: vibe-background-sequential.cpp
src/c/motion/functions/include/: vibe-background-sequential.h
src/c/motion/include/: debug.h  robot_vision.h  rv_resource.h  sengled_algorithm.h  sengled_algorithm_base.h
src/c/motion/main/: AlgorithmManager.cpp  robot_vision.cpp  sengled_algorithm_base.c  test.c
src/c/motion/main/include/: AlgorithmManager.h
src/c/motion/motion/: motionAction.cpp
src/c/motion/motion/include/: motionAction.h
src/c/motion/test/: @%  test.cpp
src/c/motion/test/decoder/: decoder.cpp
src/c/motion/test/decoder/include/: decoder.h  led_decoder.h
src/c/motion/test/include/: algorithm.h
src/java/: pom.xml
src/python/: function.py
(+277 files in other folders)
